# game_gen

./: README.md  __init__.py  analyze_games.py  analyze_gen_games.py  category_descriptions.json  descriptors.csv  processed_mechanics.json  pyproject.toml
clustering/: __init__.py  base.py  dbscan.py  llm_clusterer.py
core/: __init__.py  analyzer.py  game_mechanic_blocks.py
descriptors/: adventure.txt  altered_beast.txt  arkanoid_2.txt  balloon_fight.txt  battle_city.txt  battlezone.txt  berzerk.txt  bosconian.txt  boulder_dash.txt  breakout.txt  bubble_bobble.txt  cannon_fodder.txt  capcom_bowling.txt  castlevania.txt  centipede.txt  civilization.txt  columns.txt  contra.txt  crazy_climber.txt  defender.txt  defender_of_the_crown.txt  dig_dug.txt  donkey_kong.txt  double_dragon.txt  dragons_lair.txt  dune_2.txt  dungeon_master.txt  elevator_action.txt  elite.txt  excitebike.txt  final_fantasy.txt  frogger.txt  galaga.txt  galaxian.txt  gauntlet.txt  ghouls_n_ghosts.txt  golden_axe.txt  gradius.txt  ikari_warriors.txt  impossible_mission.txt  (+53 more)
discovery/: __init__.py  mechanic_discovery.py
game_forge/: __init__.py  story_gen.py  ui_processor.py
llm/: __init__.py  base.py  claude_client.py  openai_client.py
stories/: stories_summary_20241110.json  story_1_20241110_123239.json  story_2_20241110_123239.json  story_3_20241110_123239.json
